option('modules',
       type : 'boolean',
       value : true,
       description : 'option to install Fortran modules')

option('ciface',
       type : 'boolean',
       value : true,
       description : 'whether to build the C interfaces')

option('pythoniface',
       type : 'boolean',
       value : false,
       description : 'whether to build the Python interfaces in double precision')

option('examples',
       type : 'boolean',
       value : true,
       description : 'whether to generate the examples')

option('tests',
       type : 'boolean',
       value : true,
       description : 'whether to generate the tests')

option('single',
       type : 'boolean',
       value : true,
       description : 'whether to generate the single precision library, tests and examples')

option('double',
       type : 'boolean',
       value : true,
       description : 'whether to generate the double precision library, tests and examples')

option('ssids',
       type : 'boolean',
       value : true,
       description : 'whether to build ssids')

option('libblas',
       type : 'string',
       value : 'openblas',
       description : 'BLAS library against which to link')

option('liblapack',
       type : 'string',
       value : 'openblas',
       description : 'LAPACK library against which to link')

option('libmetis',
       type : 'string',
       value : 'metis',
       description : 'METIS library against which to link')

option('libhsl',
       type : 'string',
       value : 'hsl',
       description : 'HSL library against which to link')

option('libcutest',
       type : 'string',
       value : 'cutest',
       description : 'CUTEST library against which to link')

option('libwsmp',
       type : 'string',
       value : 'wsmp',
       description : 'WSMP library against which to link')

option('libumfpack',
       type : 'string',
       value : 'umfpack',
       description : 'UMFPACK library against which to link')

option('libpardiso',
       type : 'string',
       value : 'pardiso',
       description : 'PARDISO library against which to link')

option('libspmf',
       type : 'string',
       value : 'spmf',
       description : 'SPMF library against which to link')

option('libpastix',
       type : 'string',
       value : 'pastix',
       description : 'PASTIX library against which to link')

option('libmkl_pardiso',
       type : 'string',
       value : 'mkl_rt',
       description : 'Intel MKL PARDISO library against which to link')

option('libampl',
       type : 'string',
       value : 'ampl',
       description : 'AMPL library against which to link')

option('libblas_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the BLAS library')

option('liblapack_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the LAPACK library')

option('libmetis_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the METIS library')

option('libhsl_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the HSL library')

option('libcutest_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the CUTEST library')

option('libwsmp_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the WSMP library')

option('libumfpack_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the UMFPACK library')

option('libpardiso_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the PARDISO library')

option('libspmf_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the SPMF library')

option('libpastix_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the PASTIX library')

option('libmumps_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the MUMPS libraries')

option('libmkl_pardiso_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the Intel MKL library')

option('libampl_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the AMPL library library')

option('libhsl_modules',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the HSL modules')

option('libcutest_modules',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the CUTEST modules')

option('libmetis_version',
       type : 'combo',
       choices : ['4', '5'],
       value : '5',
       description : 'Version of the METIS library')
