option('modules',
       type : 'boolean',
       value : true,
       description : 'option to install Fortran modules')

option('ciface',
       type : 'boolean',
       value : true,
       description : 'whether to build the C interfaces')

option('pythoniface',
       type : 'boolean',
       value : false,
       description : 'whether to build the Python interfaces in double precision')

option('examples',
       type : 'boolean',
       value : false,
       description : 'whether to generate the examples')

option('tests',
       type : 'boolean',
       value : false,
       description : 'whether to generate the tests')

option('single',
       type : 'boolean',
       value : true,
       description : 'whether to generate the single precision library, tests and examples')

option('double',
       type : 'boolean',
       value : true,
       description : 'whether to generate the double precision library, tests and examples')

option('ssids',
       type : 'boolean',
       value : true,
       description : 'whether to build ssids')

option('libblas',
       type : 'string',
       value : 'openblas',
       description : 'BLAS library against which to link')

option('liblapack',
       type : 'string',
       value : 'openblas',
       description : 'LAPACK library against which to link')

option('libmetis',
       type : 'string',
       value : 'metis',
       description : 'METIS library against which to link')

option('libhsl',
       type : 'string',
       value : 'hsl',
       description : 'HSL library against which to link')

option('libcutest_single',
       type : 'string',
       value : 'cutest_single',
       description : 'CUTEST library in single precision against which to link')

option('libcutest_double',
       type : 'string',
       value : 'cutest_double',
       description : 'CUTEST library in double precision against which to link')

option('libwsmp',
       type : 'string',
       value : 'wsmp',
       description : 'WSMP library against which to link')

option('libpardiso',
       type : 'string',
       value : 'pardiso',
       description : 'PARDISO library against which to link')

option('libspmf',
       type : 'string',
       value : 'spmf',
       description : 'SPMF library against which to link')

option('libpastix',
       type : 'string',
       value : 'pastix',
       description : 'PASTIX library against which to link')

option('libampl',
       type : 'string',
       value : 'ampl',
       description : 'AMPL library against which to link')

option('libblas_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the BLAS library')

option('liblapack_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the LAPACK library')

option('libmetis_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the METIS library')

option('libhsl_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the HSL library')

option('libcutest_single_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the CUTEST library in single precision')

option('libcutest_double_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the CUTEST library in double precision')

option('libwsmp_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the WSMP library')

option('libpardiso_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the PARDISO library')

option('libspmf_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the SPMF library')

option('libpastix_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the PASTIX library')

option('libmumps_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the MUMPS libraries')

option('libampl_path',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the AMPL library library')

option('libhsl_modules',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the HSL modules')

option('libcutest_single_modules',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the CUTEST modules in single precision')

option('libcutest_double_modules',
       type : 'array',
       value : [],
       description : 'Additional directories to search for the CUTEST modules in double precision')

option('libmetis_version',
       type : 'combo',
       choices : ['4', '5'],
       value : '5',
       description : 'Version of the METIS library')

option('galahad_int64',
       type : 'boolean',
       value : false,
       description : 'Compile GALAHAD with 64-bit integer')
